# type00

./: .env.dev  pyproject.toml
src/plugins/lottery/: __init__.py  lottery.py  models.py
